--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 
 </head>
 
 <body>
-    <h1>Test1</h1>
     <header>
         <nav>
             <ul>
                 <li>
-                  <a href="./packages.html">Packages</a>  
+                    <a class="active" href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="./packages.html">Packages</a>
                 </li>
                 <li>about us</li>
                 <li>contact</li>
@@ -25,9 +28,58 @@
         </nav>
     </header>
     <main>
-        <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam provident dolore dolor beatae distinctio? Saepe, cum illo similique, molestiae vel non rem maxime laudantium numquam quo illum ducimus aliquid commodi in? Praesentium rem repellat facere deleniti libero, labore harum fugiat exercitationem velit consequatur repellendus distinctio sed consequuntur ut, a quidem. Suscipit nesciunt similique dolorum fugit neque quasi aspernatur! Explicabo, dolorum? Odit amet magnam veritatis inventore. Quae veritatis eum mollitia neque dolores eius quibusdam tempora placeat a, exercitationem optio recusandae illum culpa quasi est nulla accusamus odit? Officiis sunt voluptas cupiditate, natus aspernatur neque atque libero veniam expedita animi dolorum, adipisci facilis recusandae dolorem minus nisi cum! Pariatur quasi soluta perspiciatis doloremque eaque excepturi, sequi ipsa aspernatur omnis officia ea debitis minus ipsam obcaecati totam voluptates qui doloribus nemo facere fugiat. Laborum voluptates a esse est itaque assumenda accusamus fugit inventore minima perferendis, veniam laudantium necessitatibus repellat veritatis culpa enim, rerum sed mollitia qui debitis reiciendis! Reiciendis, minus quasi iste consequuntur ipsum dolores, reprehenderit non nam, fuga explicabo maiores dolorem error in quia. Eveniet ipsam error sint amet quae odio unde temporibus provident accusantium repellat commodi doloribus magnam fugiat laboriosam est delectus quod officiis totam ratione, quisquam perferendis saepe molestiae! Quos?
+        <section>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam provident dolore dolor beatae distinctio? Saepe, cum illo
+            similique, molestiae vel non rem maxime laudantium numquam quo illum ducimus aliquid commodi in? Praesentium
+            rem repellat facere deleniti libero, labore harum fugiat exercitationem velit consequatur repellendus distinctio
+            sed consequuntur ut, a quidem. Suscipit nesciunt similique dolorum fugit neque quasi aspernatur! Explicabo, dolorum?
+            Odit amet magnam veritatis inventore. Quae veritatis eum mollitia neque dolores eius quibusdam tempora placeat
+            a, exercitationem optio recusandae illum culpa quasi est nulla accusamus odit? Officiis sunt voluptas cupiditate,
+            natus aspernatur neque atque libero veniam expedita animi dolorum, adipisci facilis recusandae dolorem minus
+            nisi cum! Pariatur quasi soluta perspiciatis doloremque eaque excepturi, sequi ipsa aspernatur omnis officia
+            ea debitis minus ipsam obcaecati totam voluptates qui doloribus nemo facere fugiat. Laborum voluptates a esse
+            est itaque assumenda accusamus fugit inventore minima perferendis, veniam laudantium necessitatibus repellat
+            veritatis culpa enim, rerum sed mollitia qui debitis reiciendis! Reiciendis, minus quasi iste consequuntur ipsum
+            dolores, reprehenderit non nam, fuga explicabo maiores dolorem error in quia. Eveniet ipsam error sint amet quae
+            odio unde temporibus provident accusantium repellat commodi doloribus magnam fugiat laboriosam est delectus quod
+            officiis totam ratione, quisquam perferendis saepe molestiae! Quos?
         </section>
-        <section>lorem100</section>
+        <section>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero laboriosam neque harum, reiciendis debitis praesentium
+            facere? Placeat repellendus repudiandae excepturi quasi rerum expedita similique mollitia iure? Laboriosam aliquam
+            officiis tempore omnis aperiam facilis, blanditiis quos molestias expedita, tempora inventore quasi nisi. Aut
+            quibusdam accusamus exercitationem et soluta molestiae tenetur earum minima pariatur amet? Architecto exercitationem
+            quaerat perferendis doloribus sequi doloremque, facilis iste at dolores! Fugiat error debitis consequatur recusandae
+            ea officiis nihil odit nostrum fuga illum in officia nulla quidem sit sequi perferendis magnam natus sed, iusto
+            consequuntur quae nisi? Voluptatem laborum sunt aut deserunt ipsum alias distinctio porro ducimus!</section>
+        <section>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam aperiam molestias aut architecto officia labore dolores
+            ea minus itaque illo molestiae assumenda, similique accusamus vero totam. Ea atque similique ipsa, recusandae
+            labore eum error saepe? Ab nam libero quisquam possimus dolores, qui aut odit perferendis fugit iure iste inventore,
+            eius amet incidunt! Magni, voluptatem asperiores, molestias eius qui maxime nam ab eaque fugiat repudiandae tenetur
+            cum, cupiditate aspernatur? Voluptates laudantium, numquam aspernatur voluptatum, odit distinctio quia, repellat
+            officiis in maiores doloremque eaque blanditiis! In dolores debitis ad ratione, quod neque sit quibusdam corrupti
+            voluptas vero nemo eaque velit. Commodi, voluptatum?</section>
+        <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nulla Lorem ipsum dolor sit amet, consectetur adipisicing
+            elit. Explicabo earum ratione dolores quae nisi. Magnam repellat ab inventore adipisci iusto, deleniti placeat
+            facere accusamus dignissimos modi consectetur cum fugiat quaerat, beatae unde blanditiis ipsa quis nostrum aliquid.
+            Hic laboriosam assumenda doloribus reprehenderit. Aperiam nisi illo rerum quis? Consequuntur repellendus neque
+            et dicta iste reprehenderit quos esse expedita voluptate blanditiis, cupiditate repudiandae, ipsa, maxime doloribus
+            eius? Dolore magnam modi debitis facere iure voluptates rerum rem nihil sapiente omnis. Exercitationem ut qui
+            et autem facilis voluptatem, ipsum aperiam aliquam natus suscipit quaerat obcaecati id. Laborum, id cupiditate.
+            Reiciendis, minus architecto. Eius maiores distinctio sit maxime consequatur quisquam vitae perspiciatis tenetur
+            ipsam dolorum minus tempora nesciunt illo ducimus commodi voluptatem laborum, id nam omnis, nihil, quidem saepe?
+            Eius ea delectus exercitationem assumenda praesentium! Id iste non suscipit quasi nulla? Porro tempora rem distinctio
+            quam explicabo cupiditate voluptate corrupti maxime ipsa cum dolores assumenda labore vel aspernatur ratione
+            molestiae consequuntur corporis qui, modi voluptas quo praesentium. Maiores quam soluta ab libero quibusdam doloribus
+            nesciunt laboriosam molestiae deleniti cupiditate praesentium, eos et ipsa dolore beatae voluptatibus repudiandae.
+            Dicta dolorum officiis dignissimos consequatur voluptates hic eum quia rerum. Officia sapiente accusamus ipsa
+            amet nam assumenda, modi facilis vitae perspiciatis a? Fuga libero facilis debitis sequi eveniet ducimus voluptatem
+            veniam hic, eos alias excepturi, in fugiat labore odio doloremque animi? Autem velit veritatis unde accusamus
+            architecto, aperiam omnis id ab quasi recusandae doloremque, quis quisquam exercitationem possimus dicta, vel
+            quos. Aliquam, excepturi consequuntur! Assumenda magni sunt asperiores corporis, tempore blanditiis inventore
+            impedit facere laborum ut quaerat distinctio nihil aliquid sequi labore temporibus perferendis quibusdam vel
+            expedita odit aspernatur accusantium a. Repellat aliquam atque quo ad sequi. Est quia, qui tempore eligendi quasi
+            explicabo laudantium veniam cupiditate, dignissimos perferendis animi debitis, autem tenetur ipsam ducimus voluptas
+            quaerat aliquid? </section>
     </main>
     <footer>
         <nav>
